platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_48.platter
start(){
    order{
        serve 1;
    } serve 2;
    repeat(x < 3);
}start(){
    order{
        serve 1;
    } serve 2;
    repeat(x < 3);
}